--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-          <!-- <div class="menu" class="computer-disappear"></div> -->
         <div class="logo-text"></div>
+        <div class="menu" class="computer-disappear"></div> 
         <nav class="disappear">
             <div class="nav-element"><a href="#video"><p>domov</p></a></div>
             <div class="nav-element"><a href="#obsah"><p>obsah</p></a></div>
