--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="video-container"><video class="video" controls poster="images/poster.png" src="images/grindset-video.mov"></video></div>
     </section>
     <section id="obsah">
-        <div class="image-container"></div>
+        <div class="image-container disappear"></div>
         <div class="text-container">
             <p class="line1"><span class="gs">GrindSet Academy</span> je zameraná na krypto a Web3 jobs.</p>
             <h2>Obsah Academy</h2>
