--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
     <title>Grindset Academy</title>
 </head>
 <body>
-    <div class="menu-container computer-disappear">
-        <nav>
-            <div class="x"></div>
-            <div class="logo-text"></div>
-            <div class="nav-element"><a href="#video"><p>domov</p></a></div>
-            <div class="nav-element"><a href="#obsah"><p>obsah</p></a></div>
-            <div class="nav-element"><a href="#vysledky1"><p>výsledky</p></a></div>
-            <div class="nav-element"><a href="#faq"><p>faq</p></a></div>
-            <button  class="btn1"  onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">chcem makať</button>
-        </nav>
-        <div class="blackness"></div>
-    </div>
     <header>
         <div class="logo-text"></div>
-        <div class="menu" class="computer-disappear"></div> 
+        <div class="collapsible menu computer-disappear">
+            <div class=" menu-container computer-disappear">
+                <nav>
+                    <div class="x"></div>
+                    <div class="logo-text"></div>
+                    <div class="nav-element"><a href="#video"><p>domov</p></a></div>
+                    <div class="nav-element"><a href="#obsah"><p>obsah</p></a></div>
+                    <div class="nav-element"><a href="#vysledky1"><p>výsledky</p></a></div>
+                    <div class="nav-element"><a href="#faq"><p>faq</p></a></div>
+                    <button  class="btn1"  onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">chcem makať</button>
+                </nav>
+                <div class="blackness"></div>
+            </div>
+        </div> 
         <nav class="disappear">
             <div class="nav-element"><a href="#video"><p>domov</p></a></div>
             <div class="nav-element"><a href="#obsah"><p>obsah</p></a></div>
