--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-text"></div>
-        <div class="collapsible menu computer-disappear">
+        <div class="collapsible0 menu computer-disappear">
             <div class=" menu-container computer-disappear">
                 <nav>
                     <div class="x"></div>
