--- a/index.html
+++ b/index.html
@@ -113,32 +113,34 @@
         <div class="image-container"></div>
     </section>  -->
     <section id="faq">
-        <h1>Často pýtané otázky</h1>
-        <div class="row-container computer-disappear">     
-            <div class="row1">
-                <div class="question">
-                    <h3 class="gs">Pre koho je určená GrindSet Academy?</h3>
-                    <p>GrindSet Academy je vhodná pre MAKAČOV, ktorí majú záujem o kariéru v oblastiach Crypto a Web3. Bez ohľadu na to, či si začiatočník alebo skúsený profesionál, naše zdroje a mentorstvo vám môžu pomôcť posunúť sa v kariére vpred.</p>
-                </div>
-                <div class="question">
-                    <h3 class="gs">Mám na to aj keď som sprostý?</h3>
-                    <p>ANO, LEN BUDEŠ MUSIEŤ VIAC DRiEŤ</p>
-                </div>
-                <div class="question">
-                    <h3 class="gs">Aké témy pokrývajú videá?</h3>
-                    <p>Naše video obsahuje široký zoznam tém súvisiacich s Crypto a Web3, vrátane obchodovania s kryptomenami, DeFi, NFT, smart kontraktov ATĎ. Nájdete obsah vhodný pre začiatočníkov aj pokročilých študentov.</p>
-                </div>
-                <div class="question">
-                    <h3 class="gs">Ako mi môže pomôcť KOMUNITA?</h3>
-                    <p>GrindSet je IBA na pozvanie pre ambicióznych jednotlivcov. Spoločne objavujeme nové príležitosti a rozvíjame projekty prostredníctvom vynikajúceho networkingu v našej komunite.</p>
-                </div>
-                <div class="question">
-                    <h3 class="gs">JE TO ZADARMO?</h3>
-                    <p>NIE, ALE DALI SME To ZA SYMBOLICKú CENU, KOTRú SA DOZVIEš NA PRiVATE HOVORE S NAMI, POTOM čO SA NáM Osvečíš,  žE SI DOBRý FIT do našej akadémie pomojcou VYPLNENia FORMULáru</p>
-                </div>
-                <div class="question">
-                    <h3 class="gs">Čo sú web3 jobs?</h3>
-                    <p>ponúkanie služieb krypto tímom</p>
+        <div class="faq-container">
+            <h1>Často pýtané otázky</h1>
+            <div class="row-container computer-disappear">     
+                <div class="row1">
+                    <div class="question">
+                        <h3 class="gs">Pre koho je určená GrindSet Academy?</h3>
+                        <p>GrindSet Academy je vhodná pre MAKAČOV, ktorí majú záujem o kariéru v oblastiach Crypto a Web3. Bez ohľadu na to, či si začiatočník alebo skúsený profesionál, naše zdroje a mentorstvo vám môžu pomôcť posunúť sa v kariére vpred.</p>
+                    </div>
+                    <div class="question">
+                        <h3 class="gs">Mám na to aj keď som sprostý?</h3>
+                        <p>ANO, LEN BUDEŠ MUSIEŤ VIAC DRiEŤ</p>
+                    </div>
+                    <div class="question">
+                        <h3 class="gs">Aké témy pokrývajú videá?</h3>
+                        <p>Naše video obsahuje široký zoznam tém súvisiacich s Crypto a Web3, vrátane obchodovania s kryptomenami, DeFi, NFT, smart kontraktov ATĎ. Nájdete obsah vhodný pre začiatočníkov aj pokročilých študentov.</p>
+                    </div>
+                    <div class="question">
+                        <h3 class="gs">Ako mi môže pomôcť KOMUNITA?</h3>
+                        <p>GrindSet je IBA na pozvanie pre ambicióznych jednotlivcov. Spoločne objavujeme nové príležitosti a rozvíjame projekty prostredníctvom vynikajúceho networkingu v našej komunite.</p>
+                    </div>
+                    <div class="question">
+                        <h3 class="gs">JE TO ZADARMO?</h3>
+                        <p>NIE, ALE DALI SME To ZA SYMBOLICKú CENU, KOTRú SA DOZVIEš NA PRiVATE HOVORE S NAMI, POTOM čO SA NáM Osvečíš,  žE SI DOBRý FIT do našej akadémie pomojcou VYPLNENia FORMULáru</p>
+                    </div>
+                    <div class="question">
+                        <h3 class="gs">Čo sú web3 jobs?</h3>
+                        <p>ponúkanie služieb krypto tímom</p>
+                    </div>
                 </div>
             </div>
         </div>
