--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
         </div>
     </section>
     <section id="porozmyslaj">
-        <h2>Porozmýšľaj nad touto možnosťou</h2>
-        <p>AK SA CHCEš STAť FINAčNE NEzAVYSLým, tAK My TI VIEME OTVOriť túto bráNu, práve pomocou <br>
-            grindset akadémie, JEDINé čO ti zostáva JE TO, či SI OCHOtný popracovať na SebE A <br>
-             VENOVAť tomu svoj čas a energiu </p>   
+        <div class="porozmyslaj-container">        
+            <h2>Porozmýšľaj nad touto možnosťou</h2>
+            <p>AK SA CHCEš STAť FINAčNE NEzAVYSLým, tAK My TI VIEME OTVOriť túto bráNu, práve pomocou <br>
+                grindset akadémie, JEDINé čO ti zostáva JE TO, či SI OCHOtný popracovať na SebE A <br>
+                 VENOVAť tomu svoj čas a energiu </p>  </div> 
     </section>
     <section id="vysledky2">
         <div class="vysledky-container">
