--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         <button  class="btn1 disappear"  onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">chcem makať</button>
     </header>
     <section id="video">
-        <div class="horizontal-line disappear"></div>
-        <div class="text"><h1>side hustle, ktorý nikde inde nenájdeš </h1></div>
-        <div class="video-container"><video class="video" controls poster="images/poster.png" src="images/grindset-video.mov"></video></div>
+        <div class="video-text-container">
+            <div class="horizontal-line disappear"></div>
+            <div class="text"><h1>side hustle, ktorý nikde inde nenájdeš </h1></div>
+            <div class="video-container"><video class="video" controls poster="images/poster.png" src="images/grindset-video.mov"></video></div>
+        </div>
     </section>
     <section id="obsah">
         <div class="image-container disappear"></div>
