--- a/index.html
+++ b/index.html
@@ -43,20 +43,22 @@
         </div>
     </section>
     <section id="obsah">
-        <div class="image-container disappear"></div>
-        <div class="text-container">
-            <p class="line1"><span class="gs">GrindSet Academy</span> je zameraná na krypto a Web3 jobs.</p>
-            <h2>Obsah Academy</h2>
-            <ul>
-                <li>Niekoľko hodín video Contentu</li>
-                <li>Signals skupiny, kde môžeš nasledovať naše vysoko ziskové Signály</li>
-                <li>Community skupina pre networkovanie s ľuďmi s rovnakým mindsetom a pomáhanie si navzájom
-                </li>
-                <li>Web3 jobs - ponúkanie služieb Crypto tímom</li>
-                <li>Každý mesiac nové lekcie</li>  
-                <li>Osobný mentoring</li>
-            </ul>
-            <button class="btn2" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">chcem makať</button>
+        <div class="obsah-container">
+            <div class="text-container">
+                <p class="line1"><span class="gs">GrindSet Academy</span> je zameraná na krypto a Web3 jobs.</p>
+                <h2>Obsah Academy</h2>
+                <ul>
+                    <li>Niekoľko hodín video Contentu</li>
+                    <li>Signals skupiny, kde môžeš nasledovať naše vysoko ziskové Signály</li>
+                    <li>Community skupina pre networkovanie s ľuďmi s rovnakým mindsetom a pomáhanie si navzájom
+                    </li>
+                    <li>Web3 jobs - ponúkanie služieb Crypto tímom</li>
+                    <li>Každý mesiac nové lekcie</li>  
+                    <li>Osobný mentoring</li>
+                </ul>
+                <button class="btn2" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">chcem makať</button>
+            </div>
+            <div class="image-container"></div>
         </div>
     </section>
     <section id="vysledky1">
