--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
         </div>
     </section>
     <section id="vysledky1">
-        <h1><span class="gs">GrindSet</span> výsledky</h1>
         <div class="vysledky-container">
-            <div class="vysledky-image1"></div>
-            <div class="vysledky-image2"></div>
-            <div class="vysledky-image3"></div>
+            <h1><span class="gs">GrindSet</span> výsledky</h1>
+            <div class="images-container">
+                <div class="vysledky-image1"></div>
+                <div class="vysledky-image2"></div>
+                <div class="vysledky-image3"></div>
+            </div>
         </div>
     </section>
     <section id="ogrindsete">
