--- a/index.html
+++ b/index.html
@@ -72,23 +72,27 @@
         </div>
     </section>
     <section id="ogrindsete">
-        <h1>Čo je <span class="gs">Grindset academy</span>?</h1>
-        <p>Grindset Academy sme založili s presvedčením, že cesta k naplneniu <span class="gs">životného štýlu snov</span>, nie je taká zložitá, ako sa môže zdať. Sú potrebné správne informácie, ľudia, motivácia a disciplína, s týmito zložkami môžete určite dosiahnuť svoje ciele.<br>GrindSet Academy vám poskytuje <span class="gs">prístup k správnym ľuďom a informáciám</span> o online prácach a krypte, spolu s RADAMI PROFESIONáLOV.</p>
+        <div class="ogrindsete-container">
+            <h1>Čo je <span class="gs">Grindset academy</span>?</h1>
+            <p>Grindset Academy sme založili s presvedčením, že cesta k naplneniu <span class="gs">životného štýlu snov</span>, nie je taká zložitá, ako sa môže zdať. Sú potrebné správne informácie, ľudia, motivácia a disciplína, s týmito zložkami môžete určite dosiahnuť svoje ciele.<br>GrindSet Academy vám poskytuje <span class="gs">prístup k správnym ľuďom a informáciám</span> o online prácach a krypte, spolu s RADAMI PROFESIONáLOV.</p>
+        </div>
     </section>
     <section id="text1">
-        <div class="text-container">
-            <h2>Prečo <span class="gs">grindset</span>?</h2>
-            <p>Presne uvidíte, čo treba urobiť krok po kroku, aby ste mali základy na mieste, skôr než investujete svoje prvé peniaze.</p>
-            <ul>
-                <li>Profesionálna <span class="gs">online prítomnosť</span></li>
-                <li><span class="gs">Vyniknutie z konkurencie</span> (TÝM, žE TENTO SEKTOR NIE JE PRESATUROVANý)</li>
-                <li>POskytnutie <span class="gs">softvérOV/ AI</span>, ktoré budete potrebovať na dosiahnutie šesťciferných čísel
+        <div class="text1-container">
+            <div class="text-container">
+                <h2>Prečo <span class="gs">grindset</span>?</h2>
+                <p>Presne uvidíte, čo treba urobiť krok po kroku, aby ste mali základy na mieste, skôr než investujete svoje prvé peniaze.</p>
+                <ul>
+                    <li>Profesionálna <span class="gs">online prítomnosť</span></li>
+                    <li><span class="gs">Vyniknutie z konkurencie</span> (TÝM, žE TENTO SEKTOR NIE JE PRESATUROVANý)</li>
+                    <li>POskytnutie <span class="gs">softvérOV/ AI</span>, ktoré budete potrebovať na dosiahnutie šesťciferných čísel
 
-                </li>
-                <li>možnosť <span class="gs">PRáCe Z hocikaďiaľ</span></li>
-            </ul>
+                    </li>
+                    <li>možnosť <span class="gs">PRáCe Z hocikaďiaľ</span></li>
+                </ul>
+            </div>
+            <div class="image-container text1"></div>
         </div>
-        <div class="image-container text1"></div>
     </section>
     <section id="text2">
         <div class="image-container"></div>
