--- a/index.html
+++ b/index.html
@@ -95,15 +95,17 @@
         </div>
     </section>
     <section id="text2">
-        <div class="image-container"></div>
-        <div class="text-container">
-            <h2>Požiadavky</h2>
-            <ul>
-                <li>Pre vstup do Grindset Academy treba najprv <span class="gs">vyplniť formulár</span>, v ktorom nám o sebe povieš</li>
-                <li>Na základe tohto formulára <span class="gs">posÚdime</span>, či si správny kandidát. Ak áno, PôJDEME s tebou NA <span class="gs">hovor</span>, alebo ak to nie je potrebné, <span class="gs">napíš nám</span> cez Instagram.</li>
-                <li>Pamätaj, že nie každý bude prijatý, takže ti prajem veľa šťastia</li>
-            </ul>
-            <button class="btn2" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">formulár</button>
+        <div class="text2-container">
+            <div class="image-container"></div>
+            <div class="text-container">
+                <h2>Požiadavky</h2>
+                <ul>
+                    <li>Pre vstup do Grindset Academy treba najprv <span class="gs">vyplniť formulár</span>, v ktorom nám o sebe povieš</li>
+                    <li>Na základe tohto formulára <span class="gs">posÚdime</span>, či si správny kandidát. Ak áno, PôJDEME s tebou NA <span class="gs">hovor</span>, alebo ak to nie je potrebné, <span class="gs">napíš nám</span> cez Instagram.</li>
+                    <li>Pamätaj, že nie každý bude prijatý, takže ti prajem veľa šťastia</li>
+                </ul>
+                <button class="btn2" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">formulár</button>
+            </div>
         </div>
     </section>
     <!-- <section id="text3">
@@ -126,7 +128,6 @@
         <div class="faq-container">
             <h1>Často pýtané otázky</h1>
             <div class="row-container computer-disappear">     
-                <div class="row1">
                     <div class="question">
                         <h3 class="gs">Pre koho je určená GrindSet Academy?</h3>
                         <p>GrindSet Academy je vhodná pre MAKAČOV, ktorí majú záujem o kariéru v oblastiach Crypto a Web3. Bez ohľadu na to, či si začiatočník alebo skúsený profesionál, naše zdroje a mentorstvo vám môžu pomôcť posunúť sa v kariére vpred.</p>
@@ -151,7 +152,6 @@
                         <h3 class="gs">Čo sú web3 jobs?</h3>
                         <p>ponúkanie služieb krypto tímom</p>
                     </div>
-                </div>
             </div>
         </div>
                 <!-- COMPUTER FAQ -->
