--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <div class="faq-container">
             <h1>Často pýtané otázky</h1>
             <div class="row-container computer-disappear">     
-                    <div class="question">
+                    <div class="collapsible1 question">
                         <h3 class="gs">Pre koho je určená GrindSet Academy?</h3>
-                        <p>GrindSet Academy je vhodná pre MAKAČOV, ktorí majú záujem o kariéru v oblastiach Crypto a Web3. Bez ohľadu na to, či si začiatočník alebo skúsený profesionál, naše zdroje a mentorstvo vám môžu pomôcť posunúť sa v kariére vpred.</p>
+                        <p class="collapsible1--nonexpanded">GrindSet Academy je vhodná pre MAKAČOV, ktorí majú záujem o kariéru v oblastiach Crypto a Web3. Bez ohľadu na to, či si začiatočník alebo skúsený profesionál, naše zdroje a mentorstvo vám môžu pomôcť posunúť sa v kariére vpred.</p>
                     </div>
                     <div class="question">
                         <h3 class="gs">Mám na to aj keď som sprostý?</h3>
