--- a/index.html
+++ b/index.html
@@ -67,16 +67,17 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link active" aria-current="page" href="#nav">Domov</a>
+                  <a class="nav-link" href="#výsledky">Výsledky</a>
+                  <a class="nav-link" href="#faq">FAQ</a>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Obsah
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#ogrindsete">Čo je Grindset?</a></li>
+                      <li><a class="dropdown-item" href="#výhody">Výhody</a></li>
+                      <li><a class="dropdown-item" href="#požiadavky">Požiadavky</a></li>
                     </ul>
                   </li>
                   <button class="btn btn-outline-gold" type="button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScVzCq7ARFSscQACXhIhkE5M_Nx83m6GFQQzLTy76HOJosaWw/viewform?usp=sf_link'">Chcem Miesto</button>
@@ -187,7 +188,7 @@
             <!-- Text2 Text Container End -->
 
             <!-- FAQ Container Start -->
-            <div class="col-lg-12 text-left">
+            <div class="col-lg-12 text-left" id="faq">
               <div class="row d-flex justify-content-evenly mb-5">
                 <div class="col-12 display-6 mb-5 text-center">FAQ</div>
                 <div class="col-sm-12 col-lg-5">
