--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      <!-- Navbar End -->
 
            <!-- Navbar -->
-           <nav class="navbar border-bottom navbar-expand-lg py-3" data-bs-theme="dark">
+           <nav class="navbar border-bottom navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                 <img src="images/grindset-logo-text.png" alt="Bootstrap">
